Archive/8f959fbd70b0b7d44c21ff0d71967fd5-6f7ec8a47f20223a17b26973b6e13527/output
+ g++-4.8 -std=c++11 -Wall -Wextra -pedantic -O3 -pthread main.cpp
main.cpp:3:5: error: 'myint' does not name a type
     myint bar() { return myint{}; }
     ^
